--- a/references.bib
+++ b/references.bib
@@ -244,11 +244,42 @@
 	author={Vulic, Ivan and Korhonen, Anna-Leena},
 	year={2016}
 }
-
+@article{cheng2016semi,
+	title={Semi-supervised learning for neural machine translation},
+	author={Cheng, Yong and Xu, Wei and He, Zhongjun and He, Wei and Wu, Hua and Sun, Maosong and Liu, Yang},
+	journal={arXiv preprint arXiv:1606.04596},
+	year={2016}
+}
 @inproceedings{vaswani2017attention,
 	title={Attention is all you need},
 	author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
 	booktitle={Advances in Neural Information Processing Systems},
 	pages={5998--6008},
 	year={2017}
+}
+
+
+@inproceedings{adams2017cross,
+	title={Cross-lingual word embeddings for low-resource language modeling},
+	author={Adams, Oliver and Makarucha, Adam and Neubig, Graham and Bird, Steven and Cohn, Trevor},
+	booktitle={Proceedings of the 15th Conference of the European Chapter of the Association for Computational Linguistics: Volume 1, Long Papers},
+	volume={1},
+	pages={937--947},
+	year={2017}
+}
+
+
+@article{DBLP:journals/corr/abs-1801-06126,
+	author    = {Yedid Hoshen and
+	Lior Wolf},
+	title     = {An Iterative Closest Point Method for Unsupervised Word Translation},
+	journal   = {CoRR},
+	volume    = {abs/1801.06126},
+	year      = {2018},
+	url       = {http://arxiv.org/abs/1801.06126},
+	archivePrefix = {arXiv},
+	eprint    = {1801.06126},
+	timestamp = {Mon, 13 Aug 2018 16:46:27 +0200},
+	biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1801-06126},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
