--- a/wordembedding.tex
+++ b/wordembedding.tex
@@ -1,49 +1,46 @@
 \chapter{Word Embedding}
-\cite{xing2015normalized}
+Word embeddings is distributed representation of words in a vector space. With the learning algorithm it can capture the contextual or co-occurrence information. The word embedding has an interesting and important property: similar words will have similar distribution in the embedding space, with that property, we can find meaningful near-synonyms or  Some successful methods for learning word embedding like word2vec\cite{mikolov2013distributed}, \cite{pennington2014glove}
+
 \section{Monolingual Embedding}
+\begin{figure}[h]
+	\includegraphics[width=12cm]{word2vec}
+	\caption{Global attention model (\cite{mikolov2013efficient})}
+	\centering
+\end{figure}
 \subsection{CBOW and Skip-gram Model}
-	Word embeddings is distributed representation of words in a vector space. With the learning algorithm it can capture the contextual or co-occurrence information. The word embedding has an interesting and important property: similar words will have similar distribution in the embedding space, with that property, we can find meaningful near-synonyms or  Some successful methods for learning word embedding like word2vec  \cite{mikolov2013distributed}
-	Continuous Bag-of-Words model(CBOW) and Skip-Gram model
-	CBOW model and Skip-Gram model are currently the  common structures to learn the word embedding. Algorithmically,  CBOW tries to predict the current word based on the context while Skip-Gram model tries to maximize classification of a word based on another word in the same sentence.
-	The neural probability language model defines the prediction probability using the softmax function:
+CBOW model and skip-gram model are currently mainstream neural network to learn the word embedding. Algorithmically,  CBOW tries to predict the current word based on the context while skip-gram model tries to maximize classification of a word based on another word in the same sentence. Using skip-gram model as example, given a large training corpus represented as a sequence of words ${w_1, \cdots w_N}$, the objective of the model is to maximize the following log-likelihood:
+\[ \sum_{s=1}^{N} \sum_{w_t \in \mathcal{C}_s} \log\ {p(w_t|w_s)} \]
+where $w_s$ is the current word, the context $\mathcal{C}^s$ is the set of words surrounding word $w_s$, so $w_t$ means the word to predict. So probability above can be interpreted as observing a context word $w_t$ given $w_s$.\\
 
-	
-	\begin{align}
-	p(w_t | w_s) & = \textrm{softmax} {(s(w_t, w_s))} \\
-	& = \frac{\exp\{s(w_t, w_s)\}}{\sum_{w^{\prime} \in W}{\exp\{s( w^{\prime}, w_s)\}}} 
-	\end{align}
-	where ${w_t}$ is target word)label word), ${w_s}$ is the source word(input word), for Skip-Gram model, the target word refers to the context words, the source word refers to the current word, for CBOW model is simply inverted. ${W}$ denotes the whole vocabulary. Then the training objective of the model is to maximize the log-likelihood on the training dataset, i.e. by maximizing:
-	
-	\begin{align}
-	J_{ML} & = \log p(w_t| w_s)	\\
-	& = s(w_t, w_s) - \log(\sum_{w^\prime \in W} {\exp\{s(w^\prime, w_s)\}})	
-	\end{align}
+Suppose we can given a scoring function s which maps word pairs to score in $\mathbb{R}0$ like cosine similarity, the probability can be defined like softmax function:
+\begin{align}
+p(w_t | w_s) & = \textrm{softmax} {(s(w_t, w_s))} \\
+& = \frac{\exp\{s(w_t, w_s)\}}{\sum_{w^{\prime} \in W}{\exp\{s( w^{\prime}, w_s)\}}} 
+\end{align}
+where $W$ is the whole vocabulary. \\
+
+We train the model by maximizing its log-likelihood on the training dataset, i.e. by maximizing:
+\begin{align}
+J_{ML} & = \log p(w_t| w_s)	\\
+& = s(w_t, w_s) - \log(\sum_{w^\prime \in W} {\exp\{s(w^\prime, w_s)\}})	
+\end{align}
+
+\textbf{Noise-Contrastive Training}\\
+However the normalization on the whole vocabulary is very expensive since it is conducted for all words at every training step. The problem of predicting words can be considered as an independent binary classification task. For example in the skip-gram model, we consider all the context words as positive samples and the words randomly sampled from the dictionary as the negative ones. Then the training objective is 
+\[J_{NEG} = \log {Q_{\theta}{(D=1 | w_t, w_s)}} + \sum_{w^{\prime} \sim P_{noise}} {\log{Q_{\theta}{(D=0 | w^{\prime}, w_s )}}}  \]
+
+where ${Q_{\theta}{(D=1| w_t, w_s)}}$ is the binary logistic regression probability. In practice, we draw k contrastive words from the noise distribution. Then the model are instead trained to discriminate the read target word $w_t$, from imaginary (noise) words. Since we only calculate the loss function for k samples instead the whole vocabulary, it becomes much faster to train.\\
+According to  empirical results, CBOW works better on smaller datasets because CBOW smoothes over a lot of the distributional information while Skip-Gram model performs better when we have larger datasets
 
 
+
+\subsection{FastText}
+The training methods above treat each word as a distinct word embedding, however intuitively we can obtain more information from the morphological information of words. A subword model was proposed to try to fix such problem.The training network is similar, the model design a new presentation of the word: it adds speicial symbols $<$, ${>}$ as boundary information at the beginning and the end of a word. Then a normal word is represented as a bag of character $n$-grams . For example the word "where" and n equals 3, the it can be represented as the following 5 tri-grams: 
+\[ <wh, whe, her, ere, re>\]
+Suppose in this way we denote a word ${w}$ as ${G_{w}}$ the set of character ${n}$-grams, we assign for each character ${n}$-gram $g$ in ${G_{w}}$, we assign a distinct vector $z_g$, we will finally represent the embedding of word ${w}$ as the sum of these vector and also for the scoring function:
+\[s(w, w_s) = \sum_{g \in G_{w}} z_g^{T} w_s \]
 	
-	However the normalization on the whole vocabulary is very expensive because it is conducted for all words at every training step. The problem of predicting words can be considered as an independent binary classification task. For example in the Skip-Gram model, we consider all the context words as positive samples and the words randomly sampled from the dictionary as the negative ones. Then the training objective is 
-	\[J_{NEG} = \log {Q_{\theta}{(D=1 | w^{\prime}, w_s)}} + \sum_{w^{\prime} \sim W} {\log{Q_{\theta}{(D=0 | w^{\prime}, w_s )}}}  \]
-	
-	where ${Q_{\theta}{(D=1| w^{\prime} w_s)}}$ is the binary logistic regression probability. In practice, we draw k contrastive words from the noise distribution. Since we only calculate the loss function for k samples instead the whole vocabulary, it becomes much faster to train.
-	
-	
-	\[\frac{1}{T} \sum_{t=1}^{T} \sum_{-c<j<c, j\neq 0}{\textrm{log}{p(w_{t+j}|w_t)}}\]
-	where c is the size of training context, larger context size make the results more precise at the cost of training time. Suppose we are give a scoring function to evaluate the word pair(word, context), the Skip-Gram model
-	
-	\[\frac{1}{T} \sum_{t=1}^{T} \sum_{-c<j<c, j\neq 0}{\textrm{log}{p(w_{t}|w_{t+j})}}\]
-	 According to  empirical results, CBOW works better on smaller datasets because CBOW smoothes over a lot of the distributional information while Skip-Gram model performs better when we have larger datasets
-	
-	
-	Noise-Contrastive Training
-	
-	
-	\subsection{fastText}
-	The training methods above treat each word as a distinct word embedding, however intuitively we can obtain more information from the morphological information of words. A subword model was proposed to try to fix such problem.The training network is similar, the model design a new presentation of the word: it adds speicial symbols $<$, ${>}$ as boundary information at the beginning and the end of a word. Then a normal word is represented as a bag of character $n$-grams . For example the word "where" and n equals 3, the it can be represented as the following 5 tri-grams: 
-	\[ <wh, whe, her, ere, re>\]
-	Suppose in this way we denote a word ${w}$ as ${G_{w}}$ the set of character ${n}$-grams, we assign for each character ${n}$-gram $g$ in ${G_{w}}$, we assign a distinct vector $z_g$, we will finally represent the embedding of word ${w}$ as the sum of these vector and also for the scoring function:
-	\[s(w, w_s) = \sum_{g \in G_{w}} z_g^{T} w_s \]
-	
-\section{Supervised Learning of Cross-lingual Word Embedding}
+\section{ Cross-lingual Word Embedding}
 
 
 
@@ -54,7 +51,7 @@
 		\caption{A cross-lingual embedding space between German and English (\cite{ruder2017survey})}
 	\end{figure}
 	
-	
+	Cross-lingual word embeddings are appealing due to two main factors: they enable not only cross-lingual semantics, reasoning about word meaning in multilingual contexts, for example, we can induce the bilingual dictionary by calculating the cross-lingual word similarities, but also knowledge transfer between languages, most importantly between rich-resource and lean-resource languages (\cite{adams2017cross}). 
 
 	In the thesis, I assume there are two set of embeddings ${e}$, ${f}$trained separately on monolingual data.  The propose of cross-lingual word embedding training is to learn such a mapping ${W \in }$ from source embedding space to target embedding space, so $Wf_i, e_j$ in the same embedding space and for all corresponding word pairs, we need to optimize the mapping ${W}$, so that" 
 	\[ \arg\min_{W \in R^{d \times d}} \sum_{i} \lVert Wf_i - e_i \rVert \]
@@ -65,15 +62,26 @@ first observe that word embeddings trained separately on monolingual corpora exh
 
 \subsection{***}
 According to the training method we can divide the supervised method into three:
-\begin{enumerate}
-	\item Mapping based approaches\\
-	First train the monolingual word embedding separately and then seek the seed dictionary to learn the mapping. 
-	\item Pseudo-multi-lingual corpora-based approaches\\
-	Use the monolingual embedding training method on constructed corpora that contains both the source and the target language.
-	\item Joint methods\\
-	Take the parallel text as input and minimize the source and target language losses jointly with the cross-lingual regularization term
-\end{enumerate}
 
+Multilingual learning can be categorized into mapping-based approaches and regularization-based approaches. In the mapping-based approaches, the embedding is performed for each language individually with monolingual data, and then the mapping are learned using multilingual data to represent the relation between the languages. One method is to learn the linear mapping projection, another is to learn mappings that project word vectors of all languages to a common low-dimension space, where the correlation of the multilingual word pairs is maximized with the canonical correlation analysis (CCA). The advantages of approach is that it is very fast to learn the embedding alignments. The main draw back of this approach is that it is not clear if a single transformation whether linear or nonlinear can capture the relationship between all words in different languages.
+
+The regularization-based approaches involve the multilingual constraint in the objective function for learning the embedding, adds an extra term that reflects the distances of some pairs of semantically related words from different languages into the objective function. 
+%\begin{enumerate}
+%	\item Mapping based approaches\\
+%	First train the monolingual word embedding separately and then seek the seed dictionary to learn the mapping. 
+%	\item Pseudo-multi-lingual corpora-based approaches\\
+%	Use the monolingual embedding training method on constructed corpora that contains both the source and the target language.
+%	\item Joint methods\\
+%	Take the parallel text as input and minimize the source and target language losses jointly with the cross-lingual regularization term
+%\end{enumerate}
+Max-margin hinge loss (MMHL)
+learn word embeddings by train a model to output a higher score for a correct word sequence than for an incorrect one. 
+%\[\mathbb{L}^{MMHL} = \sum_{s \]
+Jointly optimize the monolingual objective ${\mathbb{L(\cdot)}}$, with the cross-lingual objective enforced as a cross-lingual regularizer. need to define a cross-lingual regularization term ${\Omega(\cdot)}$ to constrain monolingual models as they are jointly being trained over the context
+
+The joint formulation of the learning objective provided as:
+\[ J = \mathcal{L}^s + \mathcal{L}^t + \Omega(s,t) \]
+where ${\mathbb{L}^s}$ and ${\mathbb{L}^t}$ are monolingual objectives in each language optimized jointly with the cross-lingual regularization objective. 
 A dictionary is necessary for learning the cross-lingual word embedding. 
 minimizing the distance in a bilingual dictionary.\\
 
